{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "f372ace6-625d-406c-bcb8-2af5a723225d",
            "actions": [
                {
                    "name": "SwipePosition",
                    "type": "Value",
                    "id": "ab29f971-4a9c-4deb-8729-f6a716336804",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchContact",
                    "type": "Button",
                    "id": "6bc43844-40b2-4c01-9307-b5a37e0946ca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "58881d11-a1c6-4760-873f-288c843dc63d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e8964b0a-200a-46a4-b652-f8ce6d4c6738",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwipePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "46185be4-2c80-4ec8-b13f-138943761209",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ecb7bde9-49ff-432e-8a92-d375f3b18128",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}